--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_bg.properties
@@ -1,25 +1,25 @@
 add-menu=Добавяне на меню (Automatic Translation)
 add-new-menu=Добавяне на ново меню (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Добави нови страници към това меню (Automatic Translation)
 all-menus=Всички менюта (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Функция (Automatic Translation)
+function-help=Изберете една опция да позволи фрагменти автоматично да избира това меню, въз основа на неговата функция. Може да има само едно меню за всяка функция на сайта. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Навигационни менюта (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Маркирай като: (Automatic Translation)
 menus=Менюта (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Навигация (Automatic Translation)
 please-add-elements=Моля, добавете елементи. (Automatic Translation)
 please-select-a-menu-item-to-continue=Моля, изберете елемент от менюто да продължи. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Основна навигация (Automatic Translation)
 rename-site-navigation-menu=Преименуване на меню за навигация (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Средно (Automatic Translation)
+secondary-navigation=Допълнителна навигация (Automatic Translation)
+social-navigation=Социални навигация (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Реда на сайта навигация меню елементи е невалиден. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Основен меню за този сайт вече е дефиниран. (Automatic Translation)
 there-are-no-navigation-menus=Няма никакви навигационни менюта. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Няма никакви навигационни менюта. Можете да добавите меню като щракнете върху бутона плюс в долния десен ъгъл. (Automatic Translation)
 this-menu-is-empty=Това меню е празна. (Automatic Translation)
