--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_cs.properties
@@ -1,25 +1,25 @@
 add-menu=Přidat nabídku (Automatic Translation)
 add-new-menu=Přidat novou nabídku (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Přidání nové stránky do tohoto Menu (Automatic Translation)
 all-menus=Všechna menu (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funkce (Automatic Translation)
+function-help=Vyberte jednu možnost Povolit fragmenty automaticky vybrat toto menu založené na svou funkci. Může existovat pouze jedno menu pro každou funkci jeden web. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigační menu (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Označte jako: (Automatic Translation)
 menus=Nabídky (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigace (Automatic Translation)
 please-add-elements=Přidejte prvky. (Automatic Translation)
 please-select-a-menu-item-to-continue=Prosím vyberte položku nabídky pro pokračování. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Primární navigace (Automatic Translation)
 rename-site-navigation-menu=Přejmenovat navigační Menu (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Sekundární (Automatic Translation)
+secondary-navigation=Sekundární navigace (Automatic Translation)
+social-navigation=Sociální navigace (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Pořadí položek navigace webu je neplatný. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Hlavní menu pro tento web je již definován. (Automatic Translation)
 there-are-no-navigation-menus=Neexistují žádné navigační menu. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Neexistují žádné navigační menu. Menu můžete přidat klepnutím na tlačítko plus v pravém dolním rohu. (Automatic Translation)
 this-menu-is-empty=Tato nabídka je prázdná. (Automatic Translation)
