--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_et.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_et.properties
@@ -1,25 +1,25 @@
 add-menu=Lisa menüü (Automatic Translation)
 add-new-menu=Lisa uus menüü (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Uusi lehti lisada see menüü (Automatic Translation)
 all-menus=Kõik menüüd (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funktsiooni (Automatic Translation)
+function-help=Valige üks ruut killud valib selle menüü põhineb selle funktsiooni lubamiseks. Saab ainult ühe menüü iga ülesande ühe koha kohta. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigatsiooni menüü (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Märkimine: (Automatic Translation)
 menus=Menüüd (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigeerimine (Automatic Translation)
 please-add-elements=Palun lisada elemente. (Automatic Translation)
 please-select-a-menu-item-to-continue=Valige menüükäsk jätkata. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Peamine navigeerimine (Automatic Translation)
 rename-site-navigation-menu=Nimeta navigatsioonimenüü (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Keskharidus (Automatic Translation)
+secondary-navigation=Sekundaarne navigeerimine (Automatic Translation)
+social-navigation=Sotsiaalse navigeerimine (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Selle järjestuse saidi menüü ei sobi. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Peamenüü sellele saidile on juba määratletud. (Automatic Translation)
 there-are-no-navigation-menus=Puuduvad menüüd navigeerimine. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Puuduvad menüüd navigeerimine. Menüü lisamiseks klõpsake plussmärgiga nuppu all paremas nurgas. (Automatic Translation)
 this-menu-is-empty=See menüü on tühi. (Automatic Translation)
