--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_hi_IN.properties
@@ -1,25 +1,25 @@
 add-menu=मेनू जोड़ें (Automatic Translation)
 add-new-menu=नए मेनू जोड़ें (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=इस मेनू में नए पृष्ठ जोड़ें (Automatic Translation)
 all-menus=सभी मेनू (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=समारोह (Automatic Translation)
+function-help=अपने फ़ंक्शन के आधार पर इस मेनू को स्वचालित रूप से चुनने के लिए अंशों की अनुमति देने के लिए एक विकल्प चुनें । वहां केवल साइट प्रति प्रत्येक समारोह के लिए एक मेनू हो सकता है । (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=नेविगेशन मेनू (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=इस रूप में चिह्नित करें: (Automatic Translation)
 menus=मेनू (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=नेविगेशन (Automatic Translation)
 please-add-elements=कृपया तत्व जोड़ें । (Automatic Translation)
 please-select-a-menu-item-to-continue=जारी रखने के लिए कृपया किसी मेनू आइटम का चयन करें । (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=प्राथमिक नेविगेशन (Automatic Translation)
 rename-site-navigation-menu=नेविगेशन मेनू का नाम बदलें (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=माध्यमिक (Automatic Translation)
+secondary-navigation=द्वितीयक नेविगेशन (Automatic Translation)
+social-navigation=सामाजिक नेवीगेशन (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=साइट नेविगेशन मेनू आइटंस का क्रम अमांय है । (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=इस साइट के लिए प्राथमिक मेनू पहले से निर्धारित है । (Automatic Translation)
 there-are-no-navigation-menus=कोई नेविगेशन मेनू हैं। (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=कोई नेविगेशन मेनू हैं। नीचे दायें कोने पर अधिक बटन पर क्लिक करके आप एक मेनू जोड़ सकते हैं। (Automatic Translation)
 this-menu-is-empty=यह मेनू रिक्त है । (Automatic Translation)
