--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_iw.properties
@@ -1,25 +1,25 @@
 add-menu=הוספת תפריט (Automatic Translation)
 add-new-menu=הוספת תפריט חדש (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=הוספת דפים חדשים לתפריט הזה (Automatic Translation)
 all-menus=כל תפריטי (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=פונקציה (Automatic Translation)
+function-help=בחר אפשרות אחת כדי לאפשר שברי לבחור בתפריט זה מבוסס על תפקודו. יכול להיות רק תפריט אחד עבור כל פונקציה לכל אתר. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=תפריטי ניווט (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=לסמן: (Automatic Translation)
 menus=תפריטים (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=ניווט (Automatic Translation)
 please-add-elements=נא להוסיף אלמנטים. (Automatic Translation)
 please-select-a-menu-item-to-continue=נא בחר פריט תפריט כדי להמשיך. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=הניווט הראשיים (Automatic Translation)
 rename-site-navigation-menu=שינוי שם תפריט הניווט (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=משני (Automatic Translation)
+secondary-navigation=בניווט (Automatic Translation)
+social-navigation=ניווט חברתית (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=הסדר של פריטי תפריט ניווט באתר אינו חוקי. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=התפריט הראשי עבור אתר זה הוגדר כבר. (Automatic Translation)
 there-are-no-navigation-menus=ישנם אין תפריטי ניווט. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=ישנם אין תפריטי ניווט. באפשרותך להוסיף תפריט על-ידי לחיצה על לחצן ועוד בפינה הימנית התחתונה. (Automatic Translation)
 this-menu-is-empty=תפריט זה הוא ריק. (Automatic Translation)
