--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_lt.properties
@@ -1,25 +1,25 @@
 add-menu=Pridėti meniu (Automatic Translation)
 add-new-menu=Pridėti naują meniu (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Pridėti naujus puslapius į šį meniu (Automatic Translation)
 all-menus=Visas meniu (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funkcija (Automatic Translation)
+function-help=Pasirinkite vieną parinktį leisti fragmentai automatiškai pasirinkti šį meniu, pagal savo funkcijas. Ten gali būti tik vienas kiekvienos funkcijos už svetainės meniu. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigacijos meniu (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Pažymėti kaip: (Automatic Translation)
 menus=Meniu (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigacijos (Automatic Translation)
 please-add-elements=Prašome pridėti elementus. (Automatic Translation)
 please-select-a-menu-item-to-continue=Pasirinkite meniu punktą tęsti. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Pagrindinė navigacija (Automatic Translation)
 rename-site-navigation-menu=Pervardyti navigacijos meniu (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Vidurinė (Automatic Translation)
+secondary-navigation=Naršymas antriniame meniu (Automatic Translation)
+social-navigation=Socialinio naršymo (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Svetainės navigacijos meniu elementų tvarka yra negaliojanti. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Šios svetainės pagrindinė meniu jau yra nustatytas. (Automatic Translation)
 there-are-no-navigation-menus=Šiuo metu nėra navigacijos meniu. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Šiuo metu nėra navigacijos meniu. Meniu galite pridėti spustelėdami pliuso mygtuką apatiniame dešiniajame kampe. (Automatic Translation)
 this-menu-is-empty=© Iame meniu yra tuščias. (Automatic Translation)
