--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_nb.properties
@@ -1,25 +1,25 @@
 add-menu=Legg til-menyen (Automatic Translation)
 add-new-menu=Legg til ny meny (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Legge til nye sider i denne menyen (Automatic Translation)
 all-menus=Alle menyer (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funksjonen (Automatic Translation)
+function-help=Velg et alternativ å tillate fragmenter automatisk velge denne menyen basert på dens funksjon. Det kan bare være én meny for hver funksjon per område. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigeringsmenyer (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Merket som: (Automatic Translation)
 menus=Menyer (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigasjon (Automatic Translation)
 please-add-elements=Legg til elementer. (Automatic Translation)
 please-select-a-menu-item-to-continue=Velg et menyelement for å fortsette. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Primære navigasjon (Automatic Translation)
 rename-site-navigation-menu=Endre navigeringsmeny (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Videregående (Automatic Translation)
+secondary-navigation=Sekundær navigasjon (Automatic Translation)
+social-navigation=Sosiale navigasjon (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Rekkefølgen på menyelementene for nettstedet navigasjon er ugyldig. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Primære menyen for dette området er allerede definert. (Automatic Translation)
 there-are-no-navigation-menus=Har ingen navigasjonsmenyer. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Har ingen navigasjonsmenyer. Du kan legge til en meny ved å klikke på pluss-knappen på nederst til høyre. (Automatic Translation)
 this-menu-is-empty=Denne menyen er tom. (Automatic Translation)
