--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_pl.properties
@@ -1,25 +1,25 @@
 add-menu=Dodaj Menu (Automatic Translation)
 add-new-menu=Dodaj nowe Menu (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Dodawanie nowych stron do tego Menu (Automatic Translation)
 all-menus=Wszystkie menu (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funkcja (Automatic Translation)
+function-help=Wybierz jedną opcję, aby umożliwić fragmenty, aby automatycznie wybierz to menu, w oparciu o jego funkcji. Może istnieć tylko jedno menu dla każdej funkcji na stronie. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menu nawigacyjne (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Oznacz jako: (Automatic Translation)
 menus=Menu (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Nawigacja (Automatic Translation)
 please-add-elements=Dodaj elementy. (Automatic Translation)
 please-select-a-menu-item-to-continue=Wybierz element menu, aby kontynuować. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Główne menu (Automatic Translation)
 rename-site-navigation-menu=Zmień nazwę w Menu nawigacji (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Wtórne (Automatic Translation)
+secondary-navigation=Menu boczne (Automatic Translation)
+social-navigation=Społecznego nawigacji (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Kolejność elementów menu nawigacji witryny jest nieprawidłowa. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Główne menu dla tej witryny jest już zdefiniowany. (Automatic Translation)
 there-are-no-navigation-menus=Istnieją nie menu nawigacji. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Istnieją nie menu nawigacji. Menu można dodać, klikając przycisk ze znakiem plus w prawym dolnym rogu. (Automatic Translation)
 this-menu-is-empty=To menu jest pusty. (Automatic Translation)
