--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_uk.properties
@@ -1,25 +1,25 @@
 add-menu=Додати меню (Automatic Translation)
 add-new-menu=Додати нове меню (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Додати нові сторінки до цього меню (Automatic Translation)
 all-menus=Всі меню (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Функція (Automatic Translation)
+function-help=Виберіть один параметр, фрагменти автоматично вибирати це меню на основі її функції. Може бути тільки один меню для кожної функції на сайті. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Навігаційних меню (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Позначити як: (Automatic Translation)
 menus=Меню (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Навігація (Automatic Translation)
 please-add-elements=Будь ласка, додайте елементи. (Automatic Translation)
 please-select-a-menu-item-to-continue=Будь ласка, виберіть пункт меню, щоб продовжити. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Первинної навігації (Automatic Translation)
 rename-site-navigation-menu=Перейменування меню навігації (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Вторинний (Automatic Translation)
+secondary-navigation=Другорядного меню (Automatic Translation)
+social-navigation=Соціальна навігації (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Порядок елементів меню навігації сайту є неприпустимим. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Уже визначено первинний меню для цього сайту. (Automatic Translation)
 there-are-no-navigation-menus=Там не немає навігаційних меню. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Там не немає навігаційних меню. Ви можете додати меню, натиснувши кнопку плюс в нижньому правому куті. (Automatic Translation)
 this-menu-is-empty=Це меню пуста. (Automatic Translation)
