--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_zh_CN.properties
@@ -1,25 +1,25 @@
 add-menu=添加菜单 (Automatic Translation)
 add-new-menu=添加新的菜单 (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=将新页面添加到此菜单中 (Automatic Translation)
 all-menus=所有菜单 (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=功能 (Automatic Translation)
+function-help=选择一个选项以允许片段根据其功能自动选择此菜单。每个站点的每个函数只能有一个菜单。 (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=导航菜单 (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=标记为: (Automatic Translation)
 menus=菜单 (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=导航 (Automatic Translation)
 please-add-elements=请添加元素。 (Automatic Translation)
 please-select-a-menu-item-to-continue=请选择要继续的菜单项。 (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=主导航 (Automatic Translation)
 rename-site-navigation-menu=重命名导航菜单 (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=中学 (Automatic Translation)
+secondary-navigation=辅助导航 (Automatic Translation)
+social-navigation=社会导航 (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=站点导航菜单项的顺序无效。 (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=此网站的主菜单已定义。 (Automatic Translation)
 there-are-no-navigation-menus=没有导航菜单。 (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=没有导航菜单。您可以通过单击右下角的加号按钮添加菜单。 (Automatic Translation)
 this-menu-is-empty=此菜单为空。 (Automatic Translation)
