--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ar.properties
@@ -1,25 +1,25 @@
 add-menu=إضافة قائمة (Automatic Translation)
 add-new-menu=إضافة قائمة جديدة (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=إضافة صفحات جديدة إلى هذه القائمة (Automatic Translation)
 all-menus=كافة القوائم (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=الدالة (Automatic Translation)
+function-help=قم بتحديد خيار واحد للسماح للشظايا لتحديد هذه القائمة استناداً إلى وظيفتها تلقائياً. يمكن أن تكون هناك قائمة واحدة لكل وظيفة من الوظائف في الموقع الواحد. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=قوائم التنقل (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=علامة: (Automatic Translation)
 menus=القوائم (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=الملاحة (Automatic Translation)
 please-add-elements=الرجاء إضافة عناصر. (Automatic Translation)
 please-select-a-menu-item-to-continue=الرجاء تحديد عنصر قائمة الاستمرار. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=التنقل الأساسي (Automatic Translation)
 rename-site-navigation-menu=إعادة تسمية قائمة التنقل (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=الثانوية (Automatic Translation)
+secondary-navigation=الملاحة الثانوية (Automatic Translation)
+social-navigation=التنقل الاجتماعي (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=ترتيب عناصر القائمة التنقل في الموقع غير صحيح. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=معرف مسبقاً القائمة الأولية لهذا الموقع. (Automatic Translation)
 there-are-no-navigation-menus=وهناك أية قوائم التنقل. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=وهناك أية قوائم التنقل. يمكنك إضافة قائمة بواسطة النقر فوق الزر زائد في أسفل الزاوية اليمنى. (Automatic Translation)
 this-menu-is-empty=هذه القائمة غير فارغ. (Automatic Translation)
