--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ca.properties
@@ -1,25 +1,25 @@
 add-menu=Afegir menú (Automatic Translation)
 add-new-menu=Afegir nou menú (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Afegir pàgines noves a aquest menú (Automatic Translation)
 all-menus=Tots els menús (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funció (Automatic Translation)
+function-help=Seleccioneu una opció per permetre els fragments que selecciona automàticament aquest menú basat en la seva funció. Només pot haver un menú per a cada funció per lloc. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menús de navegació (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Marca-ho com: (Automatic Translation)
 menus=Menús (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navegació (Automatic Translation)
 please-add-elements=Si us plau afegir elements. (Automatic Translation)
 please-select-a-menu-item-to-continue=Seleccioneu un element de menú per continuar. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Navegació principal (Automatic Translation)
 rename-site-navigation-menu=Rebategi el menú de navegació (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Secundària (Automatic Translation)
+secondary-navigation=Navegació secundària (Automatic Translation)
+social-navigation=Navegació social (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=L'ordre dels elements de menú de navegació de lloc no és vàlid. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=El menú principal d'aquest lloc ja està definit. (Automatic Translation)
 there-are-no-navigation-menus=No hi ha cap menús de navegació. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=No hi ha cap menús de navegació. Podeu afegir un menú clicant el botó de plus a la cantonada inferior dreta. (Automatic Translation)
 this-menu-is-empty=Aquest menú és buida. (Automatic Translation)
