--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_el.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_el.properties
@@ -1,25 +1,25 @@
 add-menu=Προσθήκη μενού (Automatic Translation)
 add-new-menu=Προσθέστε νέο μενού (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Για να προσθέσετε νέες σελίδες σε αυτό το μενού (Automatic Translation)
 all-menus=Όλα τα μενού (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Λειτουργία (Automatic Translation)
+function-help=Επιλέξτε μία επιλογή για να επιτρέψετε θραύσματα να επιλέξει αυτόματα το μενού βασισμένο στη λειτουργία του. Μπορεί να υπάρξει μόνο ένα μενού για κάθε λειτουργία ανά τοποθεσία. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Μενού πλοήγησης (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Σήμανση ως: (Automatic Translation)
 menus=Μενού (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Πλοήγηση (Automatic Translation)
 please-add-elements=Παρακαλείσθε να προσθέσετε στοιχεία. (Automatic Translation)
 please-select-a-menu-item-to-continue=Παρακαλώ επιλέξτε ένα στοιχείο μενού για να συνεχίσετε. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Κύρια πλοήγηση (Automatic Translation)
 rename-site-navigation-menu=Μετονομασία μενού πλοήγησης (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Δευτεροβάθμιας (Automatic Translation)
+secondary-navigation=Δευτερεύουσα πλοήγηση (Automatic Translation)
+social-navigation=Κοινωνική πλοήγησης (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Η σειρά των στοιχείων μενού περιήγησης τοποθεσίας δεν είναι έγκυρη. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Το κύριο μενού για αυτό το site έχει ήδη οριστεί. (Automatic Translation)
 there-are-no-navigation-menus=Υπάρχουν χωρίς μενού πλοήγησης. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Υπάρχουν χωρίς μενού πλοήγησης. Μπορείτε να προσθέσετε ένα μενού κάνοντας κλικ στο κουμπί συν στο κάτω δεξιά γωνία. (Automatic Translation)
 this-menu-is-empty=Το μενού αυτό είναι άδειο. (Automatic Translation)
