--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_es.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_es.properties
@@ -1,25 +1,25 @@
 add-menu=Agregar menú (Automatic Translation)
 add-new-menu=Añadir nuevo menú (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Añadir nuevas páginas a este menú (Automatic Translation)
 all-menus=Todos los menús (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Función (Automatic Translation)
+function-help=Seleccione una opción para permitir que los fragmentos automáticamente seleccionar este menú en base a su función. Sólo puede haber un menú para cada función por sitio. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menús de navegación (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Marcar como: (Automatic Translation)
 menus=Menús (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navegación (Automatic Translation)
 please-add-elements=Por favor agregar elementos. (Automatic Translation)
 please-select-a-menu-item-to-continue=Por favor, seleccione un elemento de menú para continuar. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Navegación principal (Automatic Translation)
 rename-site-navigation-menu=Cambiar el nombre de menú de navegación (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Secundaria (Automatic Translation)
+secondary-navigation=Navegación secundaria (Automatic Translation)
+social-navigation=Navegación social (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=El orden de los elementos de menú de navegación de sitio no es válido. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Ya está definido el menú principal de este sitio. (Automatic Translation)
 there-are-no-navigation-menus=Hay no hay menús de navegación. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Hay no hay menús de navegación. Puede Agregar un menú haciendo clic en el botón más en la esquina inferior derecha. (Automatic Translation)
 this-menu-is-empty=Este menú está vacío. (Automatic Translation)
