--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_fa.properties
@@ -1,25 +1,25 @@
 add-menu=اضافه کردن منو (Automatic Translation)
 add-new-menu=افزودن منوی جدید (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=صفحات جدید را به این منو اضافه کنید (Automatic Translation)
 all-menus=تمام منوها (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=تابع (Automatic Translation)
+function-help=انتخاب یک گزینه اجازه می دهد تا قطعات را به طور خودکار این منو براساس عملکرد آن را انتخاب کنید. فقط می تواند وجود داشته باشد یک منو برای هر تابع در هر سایت. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=منوها ناوبری (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=علامت گذاری به عنوان: (Automatic Translation)
 menus=منوها (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=ناوبری (Automatic Translation)
 please-add-elements=عناصر را اضافه کنید. (Automatic Translation)
 please-select-a-menu-item-to-continue=آیتم های منو برای ادامه را انتخاب کنید. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=اصل مطلب ناوبری (Automatic Translation)
 rename-site-navigation-menu=تغییر نام منوی ناوبری (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=متوسطه (Automatic Translation)
+secondary-navigation=پیمایش دوم (Automatic Translation)
+social-navigation=پیمایش اجتماعی (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=منظور از آیتم های منو ناوبری سایت نامعتبر است. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=منوی اصلی برای این سایت تعریف شده است. (Automatic Translation)
 there-are-no-navigation-menus=منوها ناوبری بدون وجود دارد. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=منوها ناوبری بدون وجود دارد. با کلیک کردن روی دکمه به علاوه در گوشه پایین سمت راست می توانید از منو اضافه کنید. (Automatic Translation)
 this-menu-is-empty=این منو خالی می باشد. (Automatic Translation)
