--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_fr.properties
@@ -1,25 +1,25 @@
 add-menu=Ajouter Menu (Automatic Translation)
 add-new-menu=Ajouter nouveau Menu (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Ajouter de nouvelles Pages à ce Menu (Automatic Translation)
 all-menus=Tous les Menus (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Fonction (Automatic Translation)
+function-help=Sélectionnez une option pour permettre des fragments sélectionner automatiquement ce menu selon sa fonction. Il ne peut exister un menu pour chaque fonction par site. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menus de navigation (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Marquer comme : (Automatic Translation)
 menus=Menus (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigation (Automatic Translation)
 please-add-elements=S’il vous plaît ajouter des éléments. (Automatic Translation)
 please-select-a-menu-item-to-continue=Veuillez sélectionner un élément de menu pour continuer. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Navigation primaire (Automatic Translation)
 rename-site-navigation-menu=Renommer le Menu de Navigation (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Secondaire (Automatic Translation)
+secondary-navigation=Navigation secondaire (Automatic Translation)
+social-navigation=Navigation sociale (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=L’ordre des éléments de menu de navigation de site n’est pas valide. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Le menu principal de ce site est déjà défini. (Automatic Translation)
 there-are-no-navigation-menus=Il n’y a aucun menu de navigation. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Il n’y a aucun menu de navigation. Vous pouvez ajouter un menu en cliquant sur le bouton "+" sur le coin inférieur droit. (Automatic Translation)
 this-menu-is-empty=Ce menu est vide. (Automatic Translation)
