--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_hu.properties
@@ -1,25 +1,25 @@
 add-menu=Összead étlap (Automatic Translation)
 add-new-menu=Add hozzá új menü (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Új oldalak hozzáadása ebben a menüben (Automatic Translation)
 all-menus=Minden étlap (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Függvény (Automatic Translation)
+function-help=Egy beállítással töredékeket, hogy automatikusan a menü funkciója alapján teszik lehetővé. Csak lehet egy étlap részére minden függvény webhelyenként. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigációs menü (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Megjelölése: (Automatic Translation)
 menus=Menük (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigáció (Automatic Translation)
 please-add-elements=Adjon hozzá elemeket. (Automatic Translation)
 please-select-a-menu-item-to-continue=Jelöljön ki egy étlap cikk-hoz folytatódik. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Elsődleges navigációs (Automatic Translation)
 rename-site-navigation-menu=Nevezze át a navigációs menü (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Másodlagos (Automatic Translation)
+secondary-navigation=Másodlagos navigációs (Automatic Translation)
+social-navigation=Szociális navigációs (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Érvénytelen a webhely navigációs menü elemek sorrendjét. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Az elsődleges menü ezen az oldalon már definiálva van. (Automatic Translation)
 there-are-no-navigation-menus=Jelenleg nincs navigációs menük. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Jelenleg nincs navigációs menük. Kattintson a plusz gombra a jobb alsó sarokban a menüben is hozzáadhat. (Automatic Translation)
 this-menu-is-empty=Ebben a menüben az üres. (Automatic Translation)
