--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_in.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_in.properties
@@ -1,25 +1,25 @@
 add-menu=Menambahkan Menu (Automatic Translation)
 add-new-menu=Menambahkan Menu baru (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Menambahkan halaman baru untuk Menu ini (Automatic Translation)
 all-menus=Semua menu (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Fungsi (Automatic Translation)
+function-help=Pilih salah satu pilihan untuk memungkinkan fragmen agar secara otomatis memilih menu ini berdasarkan fungsinya. Hanya ada satu menu untuk masing-masing fungsi per situs. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menu navigasi (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Tandai: (Automatic Translation)
 menus=Menu (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigasi (Automatic Translation)
 please-add-elements=Harap tambahkan elemen. (Automatic Translation)
 please-select-a-menu-item-to-continue=Pilih item menu untuk melanjutkan. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Navigasi utama (Automatic Translation)
 rename-site-navigation-menu=Mengubah nama Menu navigasi (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Menengah (Automatic Translation)
+secondary-navigation=Menu sekunder (Automatic Translation)
+social-navigation=Sosial navigasi (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Urutan item menu navigasi situs tidak valid. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Menu utama untuk situs ini sudah didefinisikan. (Automatic Translation)
 there-are-no-navigation-menus=Ada tidak ada menu navigasi. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Ada tidak ada menu navigasi. Anda dapat menambahkan menu dengan mengklik tombol plus di sudut kanan bawah. (Automatic Translation)
 this-menu-is-empty=Menu ini kosong. (Automatic Translation)
