--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_it.properties
@@ -1,25 +1,25 @@
 add-menu=Aggiungere Menu (Automatic Translation)
 add-new-menu=Aggiungere un nuovo Menu (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Aggiungere nuove pagine a questo Menu (Automatic Translation)
 all-menus=Tutti i menu (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funzione (Automatic Translation)
+function-help=Selezionare un'opzione per consentire i frammenti selezionare automaticamente questo menu basato sulla sua funzione. Ci può essere solo un menu per ogni funzione per ogni sito. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menu di navigazione (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Contrassegnare come: (Automatic Translation)
 menus=Menu (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigazione (Automatic Translation)
 please-add-elements=Si prega di aggiungere elementi. (Automatic Translation)
 please-select-a-menu-item-to-continue=Si prega di selezionare una voce di menu per continuare. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Navigazione principale (Automatic Translation)
 rename-site-navigation-menu=Rinominare il Menu di navigazione (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Secondaria (Automatic Translation)
+secondary-navigation=Navigazione secondaria (Automatic Translation)
+social-navigation=Navigazione sociale (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=L'ordine delle voci di menu di navigazione sito non è valido. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Il menu principale di questo sito è già definito. (Automatic Translation)
 there-are-no-navigation-menus=Non ci sono nessun menu di navigazione. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Non ci sono nessun menu di navigazione. È possibile aggiungere un menu facendo clic sul pulsante più in basso a destra. (Automatic Translation)
 this-menu-is-empty=Questo menu è vuoto. (Automatic Translation)
