--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ko.properties
@@ -1,25 +1,25 @@
 add-menu=메뉴 추가 (Automatic Translation)
 add-new-menu=새 메뉴 추가 (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=이 메뉴에 새 페이지 추가 (Automatic Translation)
 all-menus=모든 메뉴 (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=함수 (Automatic Translation)
+function-help=자동으로 그것의 기능에 따라이 메뉴를 선택 하려면 조각 수 있도록 하나의 옵션을 선택 합니다. 사이트 마다 각 함수에 대 한 메뉴 수 있습니다. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=탐색 메뉴 (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=으로 표시: (Automatic Translation)
 menus=메뉴 (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=탐색 (Automatic Translation)
 please-add-elements=요소를 추가 하십시오. (Automatic Translation)
 please-select-a-menu-item-to-continue=계속 해 서 메뉴 항목을 선택 하십시오. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=기본 탐색 (Automatic Translation)
 rename-site-navigation-menu=탐색 메뉴 이름 바꾸기 (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=2 차 (Automatic Translation)
+secondary-navigation=2 차 탐색 (Automatic Translation)
+social-navigation=사회 탐색 (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=사이트 탐색 메뉴 항목의 순서는 유효 하지 않습니다. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=이 사이트에 대 한 기본 메뉴는 이미 정의 하 고 있습니다. (Automatic Translation)
 there-are-no-navigation-menus=없는 탐색 메뉴가 있습니다. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=없는 탐색 메뉴가 있습니다. 오른쪽 하단 모서리에 있는 더하기 버튼을 클릭 하 여 메뉴를 추가할 수 있습니다. (Automatic Translation)
 this-menu-is-empty=이 메뉴는 비어 있습니다. (Automatic Translation)
