--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_pt_BR.properties
@@ -1,25 +1,25 @@
 add-menu=Adicionar Menu (Automatic Translation)
 add-new-menu=Adicionar novo Menu (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Adicionar novas páginas a este Menu (Automatic Translation)
 all-menus=Todos os Menus (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Função (Automatic Translation)
+function-help=Selecione uma opção para permitir que fragmentos selecionar automaticamente este menu com base em sua função. Só pode haver um menu para cada função por site. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Menus de navegação (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Marca como: (Automatic Translation)
 menus=Menus de (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navegação (Automatic Translation)
 please-add-elements=Por favor, adicione elementos. (Automatic Translation)
 please-select-a-menu-item-to-continue=Por favor selecione um item de menu para continuar. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Navegação primária (Automatic Translation)
 rename-site-navigation-menu=Renomeie o Menu de navegação (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Secundária (Automatic Translation)
+secondary-navigation=Navegação secundária (Automatic Translation)
+social-navigation=Navegação social (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=A ordem dos itens de menu de navegação de site é inválida. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=No menu principal para este site já está definido. (Automatic Translation)
 there-are-no-navigation-menus=Não há nenhum menus de navegação. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Não há nenhum menus de navegação. Você pode adicionar um menu ao clicar no botão mais no canto inferior direito. (Automatic Translation)
 this-menu-is-empty=Este menu está vazio. (Automatic Translation)
