--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ro.properties
@@ -1,25 +1,25 @@
 add-menu=Adauga meniu (Automatic Translation)
 add-new-menu=Adauga nou meniu (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Adăugaţi pagini noi la acest meniu (Automatic Translation)
 all-menus=Toate meniurile (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funcţia (Automatic Translation)
+function-help=Selectaţi o opţiune pentru a permite fragmente pentru a selecta automat acest meniu bazat pe funcţia sa. Poate fi doar un meniu pentru fiecare funcţie pe site. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Meniuri de navigare (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Marcare ca: (Automatic Translation)
 menus=Meniuri (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigare (Automatic Translation)
 please-add-elements=Vă rugăm să adăugaţi elemente. (Automatic Translation)
 please-select-a-menu-item-to-continue=Vă rugăm să selectaţi un element de meniu pentru a continua. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Primar de navigare (Automatic Translation)
 rename-site-navigation-menu=Redenumiţi meniul de navigare (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Secundar (Automatic Translation)
+secondary-navigation=Secundar de navigare (Automatic Translation)
+social-navigation=Sociale de navigare (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Ordinea de elementele de meniu de navigare site-ul nu este valid. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Meniul principal pentru acest site este deja definit. (Automatic Translation)
 there-are-no-navigation-menus=Nu există nici o meniuri de navigare. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Nu există nici o meniuri de navigare. Puteţi adăuga un meniu făcând clic pe butonul plus pe colţul din dreapta. (Automatic Translation)
 this-menu-is-empty=Acest meniu este gol. (Automatic Translation)
