--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_ru.properties
@@ -1,25 +1,25 @@
 add-menu=Добавление меню (Automatic Translation)
 add-new-menu=Добавить новое меню (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Добавление новых страниц в это меню (Automatic Translation)
 all-menus=Все меню (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Функция (Automatic Translation)
+function-help=Выберите один из вариантов чтобы позволить фрагменты автоматически выбирать это меню, основанный на его функции. Может существовать только одно меню для каждой функции каждого сайта. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Меню навигации (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Пометьте как: (Automatic Translation)
 menus=Меню (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Навигация (Automatic Translation)
 please-add-elements=Пожалуйста, добавьте элементы. (Automatic Translation)
 please-select-a-menu-item-to-continue=Пожалуйста, выберите пункт меню, чтобы продолжить. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Основная навигация (Automatic Translation)
 rename-site-navigation-menu=Переименование меню навигации (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Среднее (Automatic Translation)
+secondary-navigation=Вторичные навигации (Automatic Translation)
+social-navigation=Социальная Навигация (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Недопустимый порядок пунктов меню навигации сайта. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Основного меню для этого сайта уже определен. (Automatic Translation)
 there-are-no-navigation-menus=Существует нет меню навигации. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Существует нет меню навигации. Меню можно добавить, нажав кнопку «плюс» в правом нижнем углу. (Automatic Translation)
 this-menu-is-empty=Это меню является пустым. (Automatic Translation)
