--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_sk.properties
@@ -1,25 +1,25 @@
 add-menu=Pridanie ponuky (Automatic Translation)
 add-new-menu=Pridanie novej ponuky (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Pridať nové stránky do tejto ponuky (Automatic Translation)
 all-menus=Všetky ponuky (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funkcia (Automatic Translation)
+function-help=Vyberte jednu možnosť povoliť fragmenty automaticky vyberte toto menu na základe jej funkcie. Môže existovať len jedna ponuka pre každú funkciu na mieste. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigačné menu (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Označiť ako: (Automatic Translation)
 menus=Ponuky (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigácia (Automatic Translation)
 please-add-elements=Prosím, pridajte prvkami. (Automatic Translation)
 please-select-a-menu-item-to-continue=Vyberte položku Pokračovať. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Primárnu navigáciu (Automatic Translation)
 rename-site-navigation-menu=Premenovať navigačné Menu (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Sekundárne (Automatic Translation)
+secondary-navigation=Sekundárna navigácia (Automatic Translation)
+social-navigation=Sociálna navigácia (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Poradie položiek menu navigácie lokality je neplatný. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Primárne menu na tejto stránke je už definovaný. (Automatic Translation)
 there-are-no-navigation-menus=Neexistujú žiadne navigačné menu. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Neexistujú žiadne navigačné menu. Menu môžete pridať kliknutím na tlačidlo plus na pravom dolnom rohu. (Automatic Translation)
 this-menu-is-empty=Toto menu je prázdny. (Automatic Translation)
