--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_sl.properties
@@ -1,25 +1,25 @@
 add-menu=Dodajanje menija (Automatic Translation)
 add-new-menu=Dodaj nov jedilnik (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Dodajanje nove strani v tem meniju (Automatic Translation)
 all-menus=Vse menije (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Funkcija (Automatic Translation)
+function-help=Izberite eno možnost omogočiti fragmenti samodejno izbrati ta meni, glede na njegovo funkcijo. Lahko le en meni za vsako funkcijo na mestu. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigacija menijih (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Označi kot: (Automatic Translation)
 menus=Meniji (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Navigacijo (Automatic Translation)
 please-add-elements=Dodajte elemente. (Automatic Translation)
 please-select-a-menu-item-to-continue=Izberite element menija za nadaljevanje. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Primarna navigacija (Automatic Translation)
 rename-site-navigation-menu=Preimenovanje menija (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Sekundarni (Automatic Translation)
+secondary-navigation=Navigacijski meni (Automatic Translation)
+social-navigation=Socialne navigacijo (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Vrstni red strani za krmarjenje menija je neveljaven. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Glavni meni za to mesto je že definiran. (Automatic Translation)
 there-are-no-navigation-menus=Obstajajo ne navigacija menijih. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Obstajajo ne navigacija menijih. Meni lahko dodate tako, da kliknete gumb plus v spodnjem desnem kotu. (Automatic Translation)
 this-menu-is-empty=Ta meni je prazna. (Automatic Translation)
