--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_th.properties
@@ -1,25 +1,25 @@
 add-menu=เพิ่มเมนู (Automatic Translation)
 add-new-menu=เพิ่มเมนูใหม่ (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=เพิ่มเพจใหม่เพื่อเมนูนี้ (Automatic Translation)
 all-menus=เมนูทั้งหมด (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=ฟังก์ชัน (Automatic Translation)
+function-help=เลือกหนึ่งตัวเลือกเพื่อให้ชิ้นส่วนที่เลือกเมนูนี้ตามหน้าที่ของมันโดยอัตโนมัติ สามารถมีเพียงเมนูเดียวสำหรับแต่ละฟังก์ชันต่อไซต์ (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=เมนูนำทาง (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=ทำเครื่องหมายเป็น: (Automatic Translation)
 menus=เมนู (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=นำทาง (Automatic Translation)
 please-add-elements=กรุณาเพิ่มองค์ประกอบ (Automatic Translation)
 please-select-a-menu-item-to-continue=กรุณาเลือกรายการเมนูการดำเนินต่อ (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=นำทางหลัก (Automatic Translation)
 rename-site-navigation-menu=เปลี่ยนชื่อเมนูนำทาง (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=มัธยมศึกษาตอนปลาย (Automatic Translation)
+secondary-navigation=นำทางรอง (Automatic Translation)
+social-navigation=นำทางสังคม (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=ลำดับของรายการเมนูการนำทางของไซต์ไม่ถูกต้อง (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=มีกำหนดเมนูหลักสำหรับไซต์นี้แล้ว (Automatic Translation)
 there-are-no-navigation-menus=มีเมนูไม่ (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=มีเมนูไม่ คุณสามารถเพิ่มเมนู โดยคลิกปุ่มบวกบนมุมขวาล่าง (Automatic Translation)
 this-menu-is-empty=เมนูนี้ว่างเปล่า (Automatic Translation)
