--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_tr.properties
@@ -1,25 +1,25 @@
 add-menu=Menü ekleme (Automatic Translation)
 add-new-menu=Yeni menü ekleme (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Bu menüye yeni sayfa ekleme (Automatic Translation)
 all-menus=Tüm menüler (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=İşlevi (Automatic Translation)
+function-help=Parçaları kendi işlevine dayalı bu menü otomatik olarak seçmesine izin vermek için bir seçeneği seçin. Yalnızca site başına her işlev için bir menü olabilir. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Navigasyon menüleri (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Olarak işaretle: (Automatic Translation)
 menus=Menüler (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Gezinti (Automatic Translation)
 please-add-elements=Lütfen öğelerini ekleyin. (Automatic Translation)
 please-select-a-menu-item-to-continue=Lütfen devam etmek için bir menü öğesini seçin. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Birincil gezinti (Automatic Translation)
 rename-site-navigation-menu=Gezinti menüyü yeniden adlandırma (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=İkincil (Automatic Translation)
+secondary-navigation=İkincil gezinti (Automatic Translation)
+social-navigation=Sosyal gezinti (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Site gezinti menü öğelerinin sırasını geçersiz olur. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Bu site için birincil menü zaten tanımlandı. (Automatic Translation)
 there-are-no-navigation-menus=Hiçbir navigasyon menüleri vardır. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Hiçbir navigasyon menüleri vardır. Üstünde belgili tanımlık alt doğru köşe artı düğmesini tıklatarak bir menü ekleyebilirsiniz. (Automatic Translation)
 this-menu-is-empty=Bu menü boştur. (Automatic Translation)
