--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_vi.properties
@@ -1,25 +1,25 @@
 add-menu=Thêm trình đơn (Automatic Translation)
 add-new-menu=Thêm trình đơn mới (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=Thêm mới các trang web vào Menu naøy (Automatic Translation)
 all-menus=Tất cả menu (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=Chức năng (Automatic Translation)
+function-help=Chọn một tùy chọn để cho phép các mảnh vỡ để tự động chọn trình đơn này dựa trên chức năng của nó. Có thể chỉ có một trình đơn cho mỗi chức năng cho mỗi trang web. (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=Danh mục chính Menu (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=Đánh dấu: (Automatic Translation)
 menus=Thực đơn (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=Danh mục chính (Automatic Translation)
 please-add-elements=Xin vui lòng thêm yếu tố. (Automatic Translation)
 please-select-a-menu-item-to-continue=Vui lòng chọn một mục trình đơn để tiếp tục. (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=Danh mục chính (Automatic Translation)
 rename-site-navigation-menu=Đổi tên danh mục chính Menu (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=Trung học (Automatic Translation)
+secondary-navigation=Danh mục phụ (Automatic Translation)
+social-navigation=Xã hội chuyển hướng (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=Thứ tự của mục trình đơn danh mục chính trang web là không hợp lệ. (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=Menu chính cho trang web này đã được xác định. (Automatic Translation)
 there-are-no-navigation-menus=Không có không có menu. (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=Không có không có menu. Bạn có thể thêm một trình đơn bằng cách nhấp vào nút cộng trên góc dưới bên phải. (Automatic Translation)
 this-menu-is-empty=Trình đơn này là trống rỗng. (Automatic Translation)
