--- a/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/web-experience/site-navigation/site-navigation-admin-web/src/main/resources/content/Language_zh_TW.properties
@@ -1,25 +1,25 @@
 add-menu=添加功能表 (Automatic Translation)
 add-new-menu=添加新的功能表 (Automatic Translation)
-add-new-pages-to-this-menu=Add New Pages to This Menu (Automatic Copy)
+add-new-pages-to-this-menu=將新頁面添加到此功能表中 (Automatic Translation)
 all-menus=所有功能表 (Automatic Translation)
 current-main-menu-x=Current Main Menu: {0} (Automatic Copy)
 current-selected-menu-x=Current Selected Menu: {0} (Automatic Copy)
-do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as Primary Navigation? This action will affect all the pages using Primary Navigation. (Automatic Copy)
-function=Function (Automatic Copy)
-function-help=Select one option to allow fragments to automatically select this menu based on its function. There can only be one menu for each function per site. (Automatic Copy)
+do-you-want-to-replace-x-for-x-as-the-primary-navigation?-this-action-will-affect-all-the-pages-using-primary-navigation=Do you want to replace {0} for {1} as primary navigation? This action will affect all the pages using primary navigation. (Automatic Copy)
+function=功能 (Automatic Translation)
+function-help=選擇一個選項以允許片段根據其功能自動選擇此功能表。每個網站的每個函數只能有一個功能表。 (Automatic Translation)
 javax.portlet.title.com_liferay_site_navigation_admin_web_portlet_SiteNavigationAdminPortlet=導航功能表 (Automatic Translation)
-mark-as=Mark As: (Automatic Copy)
+mark-as=標記為: (Automatic Translation)
 menus=功能表 (Automatic Translation)
-navigation=Navigation (Automatic Copy)
+navigation=導航 (Automatic Translation)
 please-add-elements=請添加元素。 (Automatic Translation)
 please-select-a-menu-item-to-continue=請選擇要繼續的功能表項目。 (Automatic Translation)
-primary-navigation=Primary Navigation (Automatic Copy)
+primary-navigation=主導航 (Automatic Translation)
 rename-site-navigation-menu=重命名導航功能表 (Automatic Translation)
-secondary=Secondary (Automatic Copy)
-secondary-navigation=Secondary Navigation (Automatic Copy)
-social-navigation=Social Navigation (Automatic Copy)
+secondary=中學 (Automatic Translation)
+secondary-navigation=輔助導航 (Automatic Translation)
+social-navigation=社會導航 (Automatic Translation)
 the-order-of-site-navigation-menu-items-is-invalid=網站導覽功能表項目的順序無效。 (Automatic Translation)
-the-primary-menu-for-this-site-is-already-defined=The primary menu for this site is already defined. (Automatic Copy)
+the-primary-menu-for-this-site-is-already-defined=此網站的主功能表已定義。 (Automatic Translation)
 there-are-no-navigation-menus=沒有導航功能表。 (Automatic Translation)
 there-are-no-navigation-menus-you-can-add-a-menu-by-clicking-the-plus-button-on-the-bottom-right-corner=沒有導航功能表。您可以通過按一下右下角的加號按鈕添加功能表。 (Automatic Translation)
 this-menu-is-empty=此功能表為空。 (Automatic Translation)
